# timesheet-ocr

./: .env.example  .gitignore  CHANGELOG.md  README.md  TASKS.md  config.yaml  debug_layout.py  debug_ocr_boxes.txt  implementation_plan_viz.md  pyproject.toml  task.md  test_gemini.py
.qwen/: settings.json  settings.json.orig
docs/: cloud_parallel_comparison.md  four_approaches_comparison.md  implementation_plan.md  implementation_plan_approaches_3_4.md  implementation_plan_viz.md  ppocr_implementation.md
explore/: field_band_crop_v10.py  field_band_crop_v11.py
scripts/: benchmark_models.py  build_combined_report.py  compare_ground_truth.py  create_combined_results.py  create_consensus_results.py  generate_all_band_crops.py  generate_band_crops_for_issues.py  patch_kpi.py  rebuild_combined_report.py  rerun_band_crop_partial.py  run_all_approaches.py  run_all_approaches_safe.py  run_targeted_rerun.py  test_cloud_parallel.py
src/: __init__.py  band_crop_extractor.py  benchmark.py  config.py  debug_viz.py  exporter.py  layout.py  layout_model.py  main.py  models.py  name_mapping.py  ocr_engine.py  parser.py  phi.py  pipeline.py  preprocessing.py  process_single.py  review_queue.py  validation.py  vlm_cloud.py  vlm_debug_viz.py  vlm_fallback.py
src/timesheet_ocr/: __main__.py  (+8 more)
tests/: test_models.py  test_parser.py  test_validation.py
workflows/: band_crop_vlm_cloud_flow.md  band_crop_vlm_cloud_flow.md.bak.20260425164547  ground_truth_comparison.md  layout_guided_vlm_cloud_flow.md  layout_guided_vlm_local_flow.md  layout_guided_vlm_local_flow.md.bak.20260425164547  ocr_only_flow.md  ppocr_grid_flow.md  vlm_full_page_flow.md
